--- a/sass/foundation/_base.scss
+++ b/sass/foundation/_base.scss
@@ -5,18 +5,15 @@ html {
 }
 
 body {
-  font-family: source-han-sans-japanese, sans-serif;
-  font-style: normal;
+  font-family: YuMincho, /* Mac用 */ "Yu Mincho", /* Windows用 */ serif;
   font-weight: 700;
   color: #fff;
   background-color: $Navy;
-  position: relative;
 }
 
 a {
   text-decoration: none;
   display: block;
-  text-decoration: none;
 }
 
 a:hover {
