--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,15 @@ html {
 }
 
 body {
-  font-family: source-han-sans-japanese, sans-serif;
-  font-style: normal;
+  font-family: YuMincho, "Yu Mincho", serif;
   font-weight: 700;
   color: #fff;
   background-color: #3e3e3e;
-  position: relative;
 }
 
 a {
   text-decoration: none;
   display: block;
-  text-decoration: none;
 }
 
 a:hover {
