--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,8 +14,7 @@
 /*-------------------
 * component
 -------------------*/
-
-/*-------------------
+@use "./object/component/c-menu"; /*-------------------
 * project
 -------------------*/
 
