--- a/sass/object/component/_c-menu.scss
+++ b/sass/object/component/_c-menu.scss
@@ -2,8 +2,22 @@
 
 .c-menu {
   span {
+    position: absolute;
+    display: block;
     width: 33px;
     height: 3px;
     background-color: $White;
+    &:nth-of-type(1) {
+      top: 20px;
+      right: 15px;
+    }
+    &:nth-of-type(2) {
+      top: 32px;
+      right: 15px;
+    }
+    &:nth-of-type(3) {
+      top: 44px;
+      right: 15px;
+    }
   }
 }
