--- a/sass/layout/_l-header.scss
+++ b/sass/layout/_l-header.scss
@@ -1,6 +1,22 @@
+@use "./../foundation/variable" as *;
+
 .l-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 65px;
+  @include tb {
+    height: 80px;
+  }
+  &__rinkPC {
+    display: none;
+    @include pc {
+      display: flex;
+    }
+    a {
+      margin-right: 60px;
+      font-size: 30px;
+      font-weight: bold;
+    }
+  }
 }
