--- a/sass/object/component/_c-font.scss
+++ b/sass/object/component/_c-font.scss
@@ -1,16 +1,47 @@
 @use "./../../foundation/variable" as *;
 
 .c-font {
+  &__h1 {
+    font-size: 20px;
+    @include tb {
+      font-size: 42px;
+    }
+  }
   &__h2 {
     font-size: fontSize(60);
     letter-spacing: 7.5px;
+    @include pc {
+      font-size: fontSize(50);
+    }
   }
   &__h3 {
-    font-size: 36px;
+    font-size: fontSize(36);
     line-height: 1.5;
+    @include tb {
+      font-size: fontSize(22);
+    }
+  }
+  &__h4 {
+    font-size: 18px;
+    @include tb {
+      font-size: 24px;
+    }
+  }
+  &__singleTitle {
+    font-size: 20px;
+    @include pc {
+      font-size: 44px;
+    }
   }
   &__p {
     font-size: 14px;
-    line-height: 2.5;
+    line-height: 2;
+    @include tb {
+      font-size: 16px;
+    }
+    @include pc {
+      font-size: 20px;
+      line-height: 2.5;
+    }
   }
 }
