--- a/sass/object/component/_c-menu.scss
+++ b/sass/object/component/_c-menu.scss
@@ -1,23 +1,18 @@
 @use "./../../foundation/variable" as *;
 
 .c-menu {
-  span {
-    position: absolute;
+  content: "";
+  background-color: $White;
+  &::before {
     display: block;
-    width: 33px;
-    height: 3px;
+    content: "";
     background-color: $White;
-    &:nth-of-type(1) {
-      top: 20px;
-      right: 15px;
-    }
-    &:nth-of-type(2) {
-      top: 32px;
-      right: 15px;
-    }
-    &:nth-of-type(3) {
-      top: 44px;
-      right: 15px;
-    }
+    position: relative;
+  }
+  &::after {
+    display: block;
+    content: "";
+    background-color: $White;
+    position: relative;
   }
 }
