--- a/sass/object/project/_p-skill.scss
+++ b/sass/object/project/_p-skill.scss
@@ -1,12 +1,37 @@
 @use "./../../foundation/variable" as *;
 
 .p-skill {
-  &__title {
-  }
-  &__itemTitle {
-    display: flex;
+  &__item {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: spWidth(70) 1fr;
+    grid-template-rows: spWidth(60) 1fr;
     align-items: center;
+    padding: 30px 3%;
+    @include tb {
+      grid-template-columns: tbWidth(80) 1fr;
+      grid-template-rows: tbWidth(60) 1fr;
+    }
+    @include pc {
+      grid-template-columns: pcWidth(300) 1fr;
+      grid-template-rows: pcWidth(100) 1fr;
+    }
+    h4 {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
+    p {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+  }
+  &__number {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 30px;
     span {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -15,6 +40,23 @@
       background-color: $White;
       color: $Black;
       border-radius: 50%;
+      border: 5px solid $Yellow;
+      @include pc {
+        height: 60px;
+        width: 60px;
+        font-size: 30px;
+      }
+    }
+  }
+  &__verticalPC {
+    @include pc {
+      position: relative;
+      h2 {
+        position: absolute;
+        right: 10%;
+        top: 0;
+        writing-mode: vertical-rl;
+      }
     }
   }
 }
