--- a/sass/object/project/_p-single.scss
+++ b/sass/object/project/_p-single.scss
@@ -22,6 +22,13 @@
       padding: 0 3%;
       margin-top: 80px;
       margin-bottom: 40px;
+      @include tb {
+        padding: 0 6%;
+      }
+      @include pc {
+        padding: 0 20%;
+        margin-top: 100px;
+      }
     }
     p {
       font-size: 14px;
@@ -29,14 +36,26 @@
       padding: 0 3%;
       margin-top: 40px;
       margin-bottom: 40px;
+      @include tb {
+        padding: 0 6%;
+      }
+      @include pc {
+        padding: 0 20%;
+        margin: 100px 0;
+      }
     }
     img {
-      margin-top: 40px;
+      margin: 40px 0;
+      max-width: 1000px;
     }
     .wp-block-buttons {
       background-color: $Ivory;
       text-align: center;
       padding: 100px 0;
+
+      @include pc {
+        padding: 150px 0;
+      }
     }
     .wp-block-button__link {
       color: $Navy;
@@ -48,6 +67,12 @@
       font-size: 1.125em;
       display: inline;
       border: 1px solid $Navy;
+      @include tb {
+        padding: tbWidth(10) tbWidth(40);
+      }
+      @include pc {
+        padding: pcWitdh(10) pcWidth(40);
+      }
     }
   }
 }
