--- a/sass/object/project/_p-mainvisual.scss
+++ b/sass/object/project/_p-mainvisual.scss
@@ -1,7 +1,7 @@
 @use "./../../foundation/variable" as *;
 
 .p-mainvisual {
-  background-image: url(./../../../img/mainvisual.png);
+  background-image: url(./../img/mainvisual.png);
   background-position: center;
   background-size: cover;
   height: calc(100vh - 65px);
