--- a/sass/object/project/_p-skill.scss
+++ b/sass/object/project/_p-skill.scss
@@ -20,10 +20,10 @@
       grid-column: 2 / 3;
       grid-row: 1 / 2;
     }
-    p {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-    }
+  }
+  &__text {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
   &__number {
     display: flex;
