--- a/sass/object/project/_p-skill.scss
+++ b/sass/object/project/_p-skill.scss
@@ -60,3 +60,20 @@
     }
   }
 }
+
+.headline {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  .rect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    display: block;
+    background: $Yellow;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-101%);
+  }
+}
